[package]
edition = "2018"
name = "napi-uuid"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2", default-features = false, features = ["napi3"]}
napi-derive = {version = "2", default-features = false, features = ["type-def"]}
uuid = {version = "1", default-features = false, features = ["v4", "fast-rng"]}

[build-dependencies]
napi-build = "1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
