[package]
edition = "2021"
name = "napi-uuid"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-alpha.7", default-features = false, features = ["napi3"] }
napi-derive = { version = "3.0.0-alpha", default-features = false, features = [
  "type-def",
] }
uuid = { version = "1", default-features = false, features = [
  "v4",
  "fast-rng",
] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1" }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
